# scripts

./: .gitattributes  README.md  format-pernosco-variable.py  gfm-to-commonmark.py  pull.bash  push.bash  query_list.tsv  template.py
bigquery/: README.md  analyze-preload.py  analyze-v3.py  analyze-v4.py  analyze.py  early-hints-dashboard-info.sql  early-hints-preconnect.sql  early-hints-v1.sql  early-hints-v2-cdf.sql  early-hints-v2.sql  experiment-data.sql  preprocess.py  query_list.bash  query_list.tsv  template.sql
bounce-tracking-protection/: README.md  enabled-v2.sql  enabled.sql  purge-count.sql  purge-timing.sql  url-classified.sql
brs/: Cargo.toml  README.md  output.txt
bz-json/: Cargo.toml
early-hints/: 2023-10-11_agg_data_norm.json  2024-01-12_preload_norm.json  agg_data.py  browsertime-experiment.py  browsertime.py  browsertime_results_analyze.py  browsertime_results_extract.py  bucket.py  combine.py  dns.py  domains.txt  find-websites.py  find.py  preload.py  raptor.py  soupify.py  top100.csv  top100_header.csv  top100_header.py  tranco_find_early_hints.py  webpagetest.py
http-tests/: brotli.py  cors.py
http-throughput/: Cargo.toml
http-throughput/src/: main.rs
sah/: Cargo.toml
sah/src/: main.rs  to_png.rs
uplift/: 0001-Bug-Tor-Proxy-in-Firefox.patch  0002-Bug-Make-tor-a-plugin.patch  0002-Bug-Provide-Tor-binary-via-GMP-plugin-system.patch  bugs.py
visualize/: cc-cubic.py  classic-cc-cwnd.py  classic-cc-info.py  classic-cc-pn.py  classic-cc.py  mozlog-neqo-cwnd.py  qlog.py
wireguard/: 0001-Bug-Wireguard-integration-in-Firefox.patch
(+15 files in other folders)
