[package]
name = "upload"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
h3 = "0.0.2"
h3-quinn = "0.0.2"
http = "0.2"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
rcgen = { version = "0.10" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
structopt = "0.3"
tokio = { version = "1.27", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
octets = "0.2.0"

tracing-tree = { version = "0.2" }

