[package]
name = "sah"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
html-escape = "0.2.13"
serde_json = "1"
text-to-png = "0.2.0"
uuid = { version = "1.17.0", features = ["v4", "v7", "serde"] }
cookie = "0.18.1"
url = { version = "2.5.4", features = ["serde"] }
indoc = "2"
serde = { version = "1.0", features = ["derive"] }
